unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/FFX_Estimated_Hours_per_PTA__c.field-meta.xml
<CustomField>
    <fullName>FFX_Estimated_Hours_per_PTA__c</fullName>
    <formula>FFX_Estimated_Hours__c / pse__Project_Task__r.pse__Number_of_Assignments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Hours per PTA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>