unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Project Task Assignments</relationshipLabel>
    <relationshipName>Project_Task_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>