unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/Project_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Project_ID_2__c</fullName>
    <formula>CASESAFEID( pse__Project_Task__r.pse__Project__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project ID 2</label>
    <type>Text</type>
</CustomField>