unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/pse__Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Estimated_Hours__c</fullName>
    <description>The hours allocated to the resource on the project task assignment.</description>
    <inlineHelpText>The hours allocated to the resource on the project task assignment.</inlineHelpText>
    <label>Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>