unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/pse__Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Project__c</fullName>
    <formula>IF(OR(ISNULL(pse__Project_Task__c),(pse__Project_Task__c=''),ISNULL(pse__Project_Task__r.pse__Project__c),(pse__Project_Task__r.pse__Project__c='')),'',HYPERLINK('/'&amp;pse__Project_Task__r.pse__Project__c,IF(OR(ISNULL(pse__Project_Task__r.pse__Project__r.Name),(pse__Project_Task__r.pse__Project__r.Name='')),pse__Project_Task__r.pse__Project__c,pse__Project_Task__r.pse__Project__r.Name)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project</label>
    <type>Text</type>
</CustomField>