unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/Role_Budget__c.field-meta.xml
<CustomField>
    <fullName>Role_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated by a flow. The Role budget linked to the PTA.</description>
    <label>Role Budget</label>
    <referenceTo>Role_Budget__c</referenceTo>
    <relationshipLabel>Project Task Assignments</relationshipLabel>
    <relationshipName>Project_Task_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>