unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/Role_Budget_Task_Reference__c.field-meta.xml
<CustomField>
    <fullName>Role_Budget_Task_Reference__c</fullName>
    <formula>pse__Project_Task__r.Role_Budget__c</formula>
    <label>Role Budget Task Reference</label>
    <type>Text</type>
</CustomField>