unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/Role_BudgetName__c.field-meta.xml
<CustomField>
    <fullName>Role_BudgetName__c</fullName>
    <formula>Role_Budget__r.Role_Budget_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Budget Name</label>
    <type>Text</type>
</CustomField>