unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/Sharepoint_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Link_URL__c</fullName>
    <label>Sharepoint Link URL</label>
    <type>Url</type>
</CustomField>