unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/Task_Details__c.field-meta.xml
<CustomField>
    <fullName>Task_Details__c</fullName>
    <description>Description of the Project Task</description>
    <formula>pse__Project_Task__r.pse__Description__c</formula>
    <inlineHelpText>Task Description.</inlineHelpText>
    <label>Task Details</label>
    <type>Text</type>
</CustomField>