unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <formula>TEXT(pse__Project_Task__r.Task_Type__c)</formula>
    <label>Task Type</label>
    <type>Text</type>
</CustomField>