unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/Timecard_Hours__c.field-meta.xml
<CustomField>
    <fullName>Timecard_Hours__c</fullName>
    <description>Actual hours from Task Time entry. Populated by DLRS.</description>
    <inlineHelpText>Rollup of hours recorded on tasks.</inlineHelpText>
    <label>Timecard Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>