unpackaged/main/default/objects/pse__Project_Task_Assignment__c/fields/Variance__c.field-meta.xml
<CustomField>
    <fullName>Variance__c</fullName>
    <formula>Role_Budget__r.Budget_Incl_Tolerance__c - Role_Budget__r.Project_Task_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Role Budget Variance</inlineHelpText>
    <label>Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>