unpackaged/main/default/objects/pse__Project_Task_Assignment__c/validationRules/Cannot_Change_Role_Budget_on_PTA_with_RR.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Role_Budget_on_PTA_with_RR</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
      Not(isblank(  pse__Resource_Request__c )),
      isChanged( Role_Budget__c )
      )</errorConditionFormula>
    <errorMessage>Role Budget cannot be changed if linked to a Resouce Request.</errorMessage>
</ValidationRule>