unpackaged/main/default/objects/pse__Project_Task_Assignment__c/validationRules/Cannot_edit_Role_Budget_on_PTA_with_AGNT.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_Role_Budget_on_PTA_with_AGNT</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
      Not(isblank(   pse__Assignment__c  )),
      Not(isblank(   Role_Budget__c  )),  
      isChanged( Role_Budget__c ),
       pse__Assignment__r.Total_Hours_Submitted__c &gt;0
      )</errorConditionFormula>
    <errorMessage>Role Budget cannot be changed if timecards are already submitted.</errorMessage>
</ValidationRule>