unpackaged/main/default/objects/pse__Project_Task_Assignment__c/validationRules/est_hours_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>est_hours_changed</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(pse__Estimated_Hours__c  )</errorConditionFormula>
    <errorMessage>CHANGED!!</errorMessage>
</ValidationRule>