unpackaged/main/default/objects/pse__Project_Task_Assignment__c/validationRules/Role_Budget_Role_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Role_Budget_Role_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( Not(IsBlank(Role_Budget__c)), 
         TEXT(pse__Resource_Role__c)&lt;&gt; TEXT(Role_Budget__r.Role__c )
     )</errorConditionFormula>
    <errorMessage>The role on the Project Task Assignment and the Role Budget do not match.</errorMessage>
</ValidationRule>