unpackaged/main/default/objects/pse__Project_Task_Assignment__c/listViews/Active_Task_Assignments.listView-meta.xml
<ListView>
    <fullName>Active_Task_Assignments</fullName>
    <columns>pse__Project__c</columns>
    <columns>pse__Project_Task__c</columns>
    <columns>Resource_Name__c</columns>
    <columns>pse__Project_Task_Start_Date__c</columns>
    <columns>pse__Project_Task_End_Date__c</columns>
    <columns>psaws__Status__c</columns>
    <columns>pse__Estimated_Hours__c</columns>
    <columns>pse__Hours__c</columns>
    <columns>Hours_Remaining__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>psaws__Is_Resource_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>psaws__Status__c</field>
        <operation>notEqual</operation>
        <value>cancelled,complete</value>
    </filters>
    <label>My Active Task Assignments</label>
</ListView>