unpackaged/main/default/objects/pse__Project_Task_Assignment__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Project_Task__c</columns>
    <columns>pse__Assignment__c</columns>
    <columns>pse__Project_Task_Start_Date__c</columns>
    <columns>pse__Project_Task_End_Date__c</columns>
    <columns>FFX_Estimated_Hours__c</columns>
    <columns>Timecard_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>